--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jaseem Khan",
   "license": "ISC",
   "description": "",
   "dependencies": {
