--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "motion"
   ],
   "author": "Jaseem Khan",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "22.x"
+  }
 }
